--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.8"
-bevy-inspector-egui = "0.12"
+bevy-inspector-egui = "0.13"
 structopt = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
